--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "groq-sdk": "^0.7.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
+    "npm": "^10.9.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "request": "^2.88.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
