--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "groq-sdk": "^0.7.0",
     "install": "^0.13.0",
+    "judini": "^2.0.5",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "npm": "^10.9.0",
