--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "groq-sdk": "^0.7.0",
     "install": "^0.13.0",
     "judini": "^2.0.5",
+    "llamaai": "^1.0.4",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "npm": "^10.9.0",
