--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "request": "^2.88.2",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.3.5"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
