--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "groq-sdk": "^0.7.0",
     "install": "^0.13.0",
+    "invest-ai": "file:",
     "judini": "^2.0.5",
     "llamaai": "^1.0.4",
     "lucide-react": "^0.456.0",
