--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm": "^10.9.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "recharts": "^2.13.3",
     "request": "^2.88.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
