--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "next": "15.0.3",
     "npm": "^10.9.0",
     "pdfjs-dist": "^4.8.69",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recharts": "^2.13.3",
     "request": "^2.88.2",
     "tailwind-merge": "^2.5.4",
