--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "judini": "^2.0.5",
     "llamaai": "^1.0.4",
     "lucide-react": "^0.456.0",
-    "next": "15.0.3",
+    "next": "^15.0.3",
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
