--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "llamaai": "^1.0.4",
     "lucide-react": "^0.456.0",
     "next": "^15.0.3",
+    "next-auth": "^4.24.10",
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
