--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "judini": "^2.0.5",
     "llamaai": "^1.0.4",
     "lucide-react": "^0.456.0",
+    "mongodb": "^6.11.0",
     "next": "^15.0.3",
     "next-auth": "^4.24.10",
     "npm": "^10.9.0",
