--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "request": "^2.88.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "twilio": "^5.3.5"
+    "twilio": "^5.3.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@types/react": "18.3.12",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.2"
   }
 }
